add support for java9 modules